# hcs3-lisp

./: .gitlab-ci.yml  Makefile  README  README.md  cabal.project  hsc3-lisp.cabal
.github/workflows/: ci.yml
Language/Sc3/Lisp/: Env.hs  Forth.hs  Haskell.hs  Interpreter.hs  NameTable.hs  Osc.hs  Sch.hs  Scs.hs  Spl.hs  Type.hs
Language/Sc3/Lisp/Parse/: Archambault.hs  Ethier.hs  Schilling.hs
Sound/SC3/: Lisp.hs
Sound/SC3/Lisp/: Env.hs  Haskell.hs  Interpreter.hs  NameTable.hs  OSC.hs  Osc.hs  Sch.hs  Scs.hs  SuperCollider.hs  Type.hs
Sound/SC3/Lisp/Parse/: Archambault.hs  Ethier.hs  Schilling.hs
Sound/Sc3/Lisp/: Env.hs  Forth.hs  Haskell.hs  Interpreter.hs  NameTable.hs  Osc.hs  Sch.hs  Scs.hs  Spl.hs  SuperCollider.hs  Type.hs
Sound/Sc3/Lisp/Parse/: Archambault.hs  Ethier.hs  Schilling.hs
cmd/: Makefile  hs-to-sexp.hs  hsc3-lisp.hs  hsc3-to-rsc3.sh  lisp.hs  rat-lisp.hs  sexp.hs
help/: announce.text  jmcc.lisp  r5rs.lisp  r5rs.scm  tutorial.lisp  tutorial.scm
hs/: HS_TO_LISP.hs  Lisp.hs  Makefile  hsc3-lisp.hs  rat-lisp.hs  sexp.hs
hs/Lisp/: Parse.hs  Type.hs
hs/Lisp/Parse/: Archambault.hs  Ethier.hs  Schilling.hs
lib/: README  core-name-tbl.text  hs-name-tbl.text  hsc3-name-tbl.text  sch-name-tbl.text  scs-name-tbl.text
lisp/: Makefile  README  alias.lisp  hsc3.lisp  rdu.lisp  rhs.lisp  rhs.syntax.lisp  rsc3-compat.lisp  rsc3.lisp  rsc3.prereq.lisp  scheme.lisp  stdlib.lisp  tutorial.lisp  ugen.lisp
md/: announce.md  hs-to-sexp.md  sexp.md
scm/: Makefile  alias.scm  hsc3.scm  rhs.prereq.scm  rhs.scm  rsc3.prereq.scm  rsc3.scm  stdlib.scm  ugen.scm
