Cabal-Version:     2.4
Name:              hsc3-lisp
Version:           0.20
Synopsis:          Lisp Supercollider
Description:       Lisp Supercollider
License:           GPL-3.0-only
Category:          Sound
Copyright:         (c) Rohan Drape, 2014-2021
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hsc3-lisp
Tested-With:       GHC == 8.8.4
Build-Type:        Simple

Data-files:        README.md
                   help/*.scm
                   lib/*.text
                   md/*.md
                   scm/*.scm

library
  build-depends:   array,
                   base >= 4.8,
                   bytestring,
                   containers,
                   directory,
                   filepath,
                   hashable,
                   haskell-src-exts,
                   husk-scheme >= 3.19.4,
                   hosc == 0.20.*,
                   hsc3 == 0.20.*,
                   hsc3-dot == 0.20.*,
                   hsc3-rw == 0.20.*,
                   mtl,
                   safe,
                   stsc3 == 0.20.*,
                   unix
  default-language:Haskell2010
  ghc-options:     -Wall -fno-warn-orphans -fwarn-tabs
  exposed-modules: Sound.SC3.Lisp,
                   Sound.SC3.Lisp.Env,
                   Sound.SC3.Lisp.Haskell,
                   Sound.SC3.Lisp.NameTable,
                   Sound.SC3.Lisp.Osc,
                   Sound.SC3.Lisp.Parse.Ethier,
                   Sound.SC3.Lisp.Sch,
                   Sound.SC3.Lisp.SuperCollider,
                   Sound.SC3.Lisp.Type

executable hsc3-lisp
  build-depends:   base >= 4.8 && < 5,
                   containers,
                   hosc == 0.20.*,
                   hsc3 == 0.20.*,
                   hsc3-dot == 0.20.*,
                   hsc3-lisp == 0.20.*,
                   hsc3-rw == 0.20.*,
                   mtl,
                   safe
  hs-source-dirs:  cmd
  main-is:         lisp.hs
  ghc-options:     -Wall -fno-warn-orphans -fwarn-tabs
  default-language:Haskell2010

executable hsc3-sexp
  build-depends:   base >= 4.8 && < 5,
                   hmt-base == 0.20.*,
                   hsc3-lisp == 0.20.*
  hs-source-dirs:  cmd
  main-is:         sexp.hs
  ghc-options:     -Wall -fno-warn-orphans -fwarn-tabs
  default-language:Haskell2010

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hsc3-lisp
