Cabal-Version:     2.4
Name:              hsc3-lisp
Version:           0.21
Synopsis:          Lisp Supercollider
Description:       Lisp Supercollider
License:           GPL-3.0-only
Category:          Sound
Copyright:         (c) Rohan Drape, 2014-2023
Author:            Rohan Drape
Maintainer:        rd@rohandrape.net
Stability:         Experimental
Homepage:          http://rohandrape.net/t/hsc3-lisp
Tested-With:       GHC == 9.8.1
Build-Type:        Simple

Data-files:        README.md
                   help/*.scm
                   lib/*.text
                   md/*.md
                   scm/*.scm

library
  build-depends:   array,
                   base >= 4.8,
                   bytestring,
                   containers,
                   directory,
                   filepath,
                   hashable,
                   haskell-src-exts,
                   husk-scheme >= 3.19.4,
                   hosc == 0.21.*,
                   hsc3 == 0.21.*,
                   hsc3-dot == 0.21.*,
                   hsc3-rw == 0.21.*,
                   mtl,
                   safe,
                   stsc3 == 0.21.*,
                   stsc3-som == 0.21.*,
                   unix
  default-language:Haskell2010
  ghc-options:     -Wall -fno-warn-orphans -fwarn-tabs
  exposed-modules: Language.Sc3.Lisp.Env,
                   Language.Sc3.Lisp.Forth,
                   Language.Sc3.Lisp.Haskell,
                   Language.Sc3.Lisp.Interpreter,
                   Language.Sc3.Lisp.NameTable,
                   Language.Sc3.Lisp.Osc,
                   Language.Sc3.Lisp.Parse.Ethier,
                   Language.Sc3.Lisp.Sch,
                   Language.Sc3.Lisp.Scs,
                   Language.Sc3.Lisp.Spl,
                   Language.Sc3.Lisp.Type

executable hsc3-lisp
  build-depends:   base >= 4.8 && < 5,
                   containers,
                   hosc == 0.21.*,
                   hsc3 == 0.21.*,
                   hsc3-dot == 0.21.*,
                   hsc3-lisp == 0.21.*,
                   hsc3-rw == 0.21.*,
                   mtl,
                   safe,
                   stsc3-som == 0.21.*
  hs-source-dirs:  cmd
  main-is:         lisp.hs
  ghc-options:     -Wall -fno-warn-orphans -fwarn-tabs
  default-language:Haskell2010

executable hsc3-sexp
  build-depends:   base >= 4.8 && < 5,
                   hmt-base == 0.21.*,
                   hsc3-lisp == 0.21.*,
                   stsc3 == 0.21.*
  hs-source-dirs:  cmd
  main-is:         sexp.hs
  ghc-options:     -Wall -fno-warn-orphans -fwarn-tabs
  default-language:Haskell2010

Source-Repository  head
  Type:            git
  Location:        https://gitlab.com/rd--/hsc3-lisp
